enhance authentication flow by adding phone number and address to JWT response; update user model and registration component; implement auto-login in app component; clean up unused code and improve test cases